@@ -1,5 +1,6 @@
 Version 3.12
 
+* IMPROVEMENT: Increased the size of the statically allocated KSI_Integer pool up to the value of 0xff.
 * IMPROVEMENT: Removed experimental feature KSI_NetworkClient_performAll.
 * IMPROVEMENT: Removed multi-signature support from the SDK.
 
